Removed manglers which are now context dependent

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ requires = [
     "setuptools>=42",
     "wheel",
     "onnx",
-    "mako"
+    "mako",
+    "copy",
+    "re",
+    "numpy",
+    "enum"
 ]
 build-backend = "setuptools.build_meta"
