Added dumpcmsislibs repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DumpOTest"]
 	path = DumpOTest
 	url = https://iis-git.ee.ethz.ch/scheremo/dumpotest.git
+[submodule "dumpocmsislibs"]
+	path = dumpocmsislibs
+	url = https://iis-git.ee.ethz.ch/scheremo/dumpocmsislibs
