--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "DumpOTest"]
 	path = DumpOTest
-	url = https://iis-git.ee.ethz.ch/scheremo/dumpotest.git
+	url = git@iis-git.ee.ethz.ch:scheremo/dumpotest.git
 [submodule "dumpocmsislibs"]
 	path = dumpocmsislibs
-	url = https://iis-git.ee.ethz.ch/scheremo/dumpocmsislibs
+	url = git@iis-git.ee.ethz.ch:scheremo/dumpocmsislibs.git
 [submodule "dumpotest"]
 	path = dumpotest
-	url = https://iis-git.ee.ethz.ch/scheremo/dumpotest
+	url = git@iis-git.ee.ethz.ch:scheremo/dumpotest.git
