--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Updating dependencies"
+    - python -m venv ./env
+    - source ./env/bin/activate
     - git submodule update --init --recursive
     - git checkout dumpotest
     - git checkout dumpocmsislibs
