--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Updating dependencies"
-    - python3 -m venv ./env
+    - /bin/python3.6 -m venv ./env
     - source ./env/bin/activate
     - git submodule update --init --recursive
     - python setup.py install
