--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,16 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Updating dependencies"
-    - /bin/python3.6 -m venv ./env
-    - source ./env/bin/activate
+    - python3.6 -m venv ./testenv
+    - source ./testenv/bin/activate
+    - wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
+    - python ./get-pip.py
     - git submodule update --init --recursive
-    - python setup.py install
+    - pip install -e .
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
-      - ./env
+      - ./testenv
 
 network-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
