--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ build-job:       # This job runs in the build stage, which runs first.
 network-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - source ./env/bin/activate
+    - source ./testenv/bin/activate
     - cd dumpotest
     - python generateNetwork.py -t Tests/simpleRegression
     - cd ..
