Another setup fix try...

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ author=Moritz Scherer
 author_email=scheremo@iis.ee.ethz.ch
 description=DumpO - Bring you networks to your platform
 [options]
+setup_requires =
+    nvidia-pyindex
 install_requires =
     onnx          
     mako
