--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ description=DumpO - Bring you networks to your platform
 [options]
 setup_requires =
     nvidia-pyindex
+    cmake>=3.1
 install_requires =
     onnx          
     mako
