--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Updating dependencies"
     - python3.6 -m venv ./testenv --without-pip
+    - bash
     - source ./testenv/bin/activate
     - wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
     - python ./get-pip.py
