--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,8 @@ build-job:       # This job runs in the build stage, which runs first.
     - source ./testenv/bin/activate
     - wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
     - python ./get-pip.py
-    - python testenv/bin/easy_install cmake
+    - pip install cmake
+    - export PATH=$(pwd)/testenv/bin:$PATH
     - pip install -e .
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
