--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
     - python ./get-pip.py
     - pip install cmake
-    - export PATH=$(pwd)/testenv/bin:$PATH
+    - export PATH=/usr/sepp/bin:$PATH
     - pip install -e .
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
