--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,8 @@ description=DumpO - Bring you networks to your platform
 [options]
 setup_requires =
     nvidia-pyindex
-    cmake>=3.1
+    protobuf==3.16.0
+    numpy
 install_requires =
     onnx          
     mako
