--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,16 +21,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Updating dependencies"
-    - export PATH=/usr/sepp/bin:$PATH
-    - python3.6 -m venv ./testenv --without-pip
-    - bash
-    - source ./testenv/bin/activate
-    - wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
-    - python ./get-pip.py
-# Oh lord, forgive my sins...
-    - wget -O onnx.tar.bz2 https://anaconda.org/conda-forge/onnx/1.9.0/download/linux-64/onnx-1.9.0-py36h0b4aed0_1.tar.bz2
-    - tar -xvf onnx.tar.bz2
-    - cp -r ./lib/python3.6/site-packages/* ./testenv/lib/python3.6/site-packages
+    - conda activate dumpoci
     - pip install -e .
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
