--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Updating dependencies"
     - bash
+    - conda init bash
     - conda activate dumpoci
     - pip install -e .
   artifacts:
