--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - echo "Updating dependencies"
     - bash
     - conda init bash
+    - source ~/.bashrc
     - conda activate dumpoci
     - pip install -e .
   artifacts:
