--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,16 +25,14 @@ build-job:       # This job runs in the build stage, which runs first.
     - source ~/.bashrc
     - conda activate dumpoci
     - pip install -e .
-  artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
-    paths:
-      - ./testenv
 
 network-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - git submodule update --init --recursive
-    - source ./testenv/bin/activate
+    - bash
+    - source ~/.bashrc
+    - conda activate dumpoci
     - cd dumpotest
     - python generateNetwork.py -t Tests/simpleRegression
     - cd ..
