--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,35 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-
 stages:          # List of stages for jobs, and their order of execution
   - build
-  - test
+  - run
 
-build-job:       # This job runs in the build stage, which runs first.
+build:       # This job runs in the build stage, which runs first.
   stage: build
+  artifacts:
+    untracked: true
   script:
     - echo "Updating dependencies"
     - bash
     - source ~/.bashrc
     - conda activate dumpoci
     - pip install -e .
+    - unzip -o dumpotest/third_party/AmbiqSuite-4.zip -d dumpotest/third_party/
+    - rm -f dumpotest/out.txt
 
-network-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+run:   # This job runs in the test stage.
+  stage: run    # It only starts when the job in the build stage completes successfully.
+  dependencies: 
+    - build
   script:
     - git submodule update --init --recursive
     - bash
     - source ~/.bashrc
+    - export PATH="~scheremo/gcc-arm/bin:$PATH"
+    - export LD_LIBRARY_PATH="~scheremo/.local/JLink_Linux_V770c_x86_64/:$LD_LIBRARY_PATH"
     - conda activate dumpoci
     - cd dumpotest
-    - python generateNetwork.py -t Tests/simpleRegression
-    - cd ..
-    - make -C dumpotest/Platforms/QEMU_ARM/ clean all run >> ./out.txt
+    - python testRunner.py --device=/dev/ttyACM1 -t ./Tests/simpleRegression
+    
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
-      - ./out.txt
+      - ./dumpotest/out.txt
