--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ build:       # This job runs in the build stage, which runs first.
     - source ~/.bashrc
     - conda activate dumpoci
     - pip install -e .
-    - unzip -o dumpotest/third_party/AmbiqSuite-4.zip -d dumpotest/third_party/
     - rm -f dumpotest/out.txt
 
 run:   # This job runs in the test stage.
@@ -27,8 +26,10 @@ run:   # This job runs in the test stage.
     - export PATH="~scheremo/gcc-arm/bin:$PATH"
     - export LD_LIBRARY_PATH="~scheremo/.local/JLink_Linux_V770c_x86_64/:$LD_LIBRARY_PATH"
     - conda activate dumpoci
+    - unzip -o dumpotest/third_party/AmbiqSuite-4.zip -d dumpotest/third_party/
     - cd dumpotest
-    - python testRunner.py --device=/dev/ttyACM1 -t ./Tests/simpleRegression
+    - python testRunner.py --device=/dev/ttyACM0 -t ./Tests/simpleRegression
+    - python testRunner.py --device=/dev/ttyACM0 -t ./Tests/WaveFormer
     
   artifacts:
     name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME-$CI_COMMIT_SHORT_SHA"
