--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ dependencies = [
 ]
 [tool.setuptools]
 packages = ['DumpO']
+[tool.yapf]
+based_on_style = "google"
+column_limit = 120
+split_before_logical_operator = true
+spaces_around_default_or_named_assign = true
