--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "dumpotest"]
 	path = dumpotest
-	url = git@iis-git.ee.ethz.ch:wiesep/dumpotest.git
+	url = git@iis-git.ee.ethz.ch:scheremo/dumpotest.git
 [submodule "dumpobasiclibs"]
 	path = dumpobasiclibs
 	url = git@iis-git.ee.ethz.ch:wiesep/dumpobasiclibs.git
 [submodule "dumpocmsislibs"]
 	path = dumpocmsislibs
-	url = git@iis-git.ee.ethz.ch:wiesep/dumpocmsislibs.git
+	url = git@iis-git.ee.ethz.ch:scheremo/dumpocmsislibs.git
